<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeView"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.example.fostersoftsol01.luvoffers.Tesco.TescoExter">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_content"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fitsSystemWindows="true"
                        android:scaleType="fitXY"
                        app:layout_collapseMode="parallax" />

                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imgLogo"
                            android:src="@drawable/menu"/>

                        <TextView
                            android:id="@+id/tvLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/tesco"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/imgLogo"
                            android:layout_toEndOf="@+id/imgLogo"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp" />

                        <TextView
                            android:id="@+id/tvHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginRight="10dp"
                            android:text="@string/luvHeader"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <include layout="@layout/content_main"/>


    </android.support.design.widget.CoordinatorLayout>



    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/navigationMenu"
        android:orientation="vertical"
        android:background="@drawable/back_image"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeView1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/imgBack"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/img_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logoText"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:textSize="28sp"
                android:layout_alignTop="@+id/imgBack"
                android:layout_centerHorizontal="true" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/logoText">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imgOffers"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/offer"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navOffer"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgOffers"
                android:layout_toEndOf="@+id/imgOffers" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/logoText">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imgContact"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/contact_us_new"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navContact"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgContact"
                android:layout_toEndOf="@+id/imgContact" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/logoText">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imgWork"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/info_new"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navWork"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgWork"
                android:layout_toEndOf="@+id/imgWork" />

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/btnOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/offers"
            android:background="@drawable/btn_background"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_background_new"
            android:textStyle="bold"
            android:text="@string/later"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
